--- a/src/app/components/header/add/add.component.html
+++ b/src/app/components/header/add/add.component.html
@@ -1,8 +1,8 @@
-<form class="p-4 bg-white" [formGroup]="notes">
-  <h2 class="pb-2 mb-4 border-b">Add note</h2>
-  <div class="div flex gap-2 justify-between mr-4">
+<form class="p-8 bg-white max-w-5xl mx-auto rounded-lg" [formGroup]="notes">
+  <h2 class="pb-2 mb-6 border-b text-xl">Add note</h2>
+  <div class="div flex flex-col sm:flex-row gap-8 justify-between mr-4">
     <input
-      class="bg-gray-100 p-2 w-2/3"
+      class="bg-gray-100 p-2 rounded-lg sm:w-8/12 hover:outline hover:outline-blue-600 focus:outline focus:outline-blue-600"
       type="text"
       name="title"
       id="title"
@@ -10,7 +10,7 @@
       formControlName="title"
     />
     <select
-      class="bg-gray-100 outline-none p-4"
+      class="bg-gray-100 rounded-lg outline-none p-4 sm:w-1/3 hover:outline hover:outline-blue-600 focus:outline focus:outline-blue-600"
       name="category"
       id="category"
       formControlName="category"
@@ -21,17 +21,19 @@
       <option value="BUSINESS">Business</option>
     </select>
   </div>
-  <div class="mt-4 flex justify-between items-end">
+  <div class="mt-8 flex flex-col sm:flex-row gap-10 justify-between items-end">
     <textarea
-      class="bg-gray-100 min-h-32 p-4 w-2/3"
+      class="bg-gray-100 min-h-48 rounded-lg p-2 w-full sm:w-8/12 hover:outline hover:outline-blue-600 focus:outline focus:outline-blue-600"
       name="desc"
       id="desc"
       formControlName="desc"
       placeholder="Add description"
     ></textarea>
-    <div class="button text-blue-600">
-      <button>Cancel</button>
-      <button (click)="AddTask()" type="button" class="mx-4">Add</button>
+    <div class="button text-blue-600 sm:w-1/3 text-end">
+      <button class="uppercase" (click)="cancel()">Cancel</button>
+      <button (click)="AddTask()" type="button" class="mx-4 uppercase">
+        Add
+      </button>
     </div>
   </div>
 </form>
