--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,31 +1,34 @@
-<div class="home_container p-4 bg-gray-100">
-  <h1>Your notes</h1>
-  <ul class="uppercase flex border-b">
+<div class="home_container p-4 bg-gray-100 rounded-lg">
+  <h1 class="text-3xl font-bold my-6 text-center">Your notes</h1>
+  <ul class="uppercase flex border-b mb-4">
     <li
-      class="mx-4 hover:text-blue-600 hover:border-b border-blue-600 transition duration-700"
+      class="mx-5 hover:text-blue-600 hover:border-b border-blue-600 transition duration-700"
     >
       All
     </li>
     <li
       class="hover:text-blue-600 hover:border-b border-blue-600 transition duration-700"
+      (click)="personalItems()"
     >
       personal
     </li>
     <li
-      class="mx-4 hover:text-blue-600 hover:border-b border-blue-600 transition duration-700"
+      class="mx-5 hover:text-blue-600 hover:border-b border-blue-600 transition duration-700"
+      (click)="workItems()"
     >
       work
     </li>
     <li
       class="hover:text-blue-600 hover:border-b border-blue-600 transition duration-700"
+      (click)="bussinessItems()"
     >
       business
     </li>
   </ul>
-  <div class="grid grid-cols-4 gap-4 py-2">
-    @for (item of mytask; track $index) {
+  <div class="grid md:grid-cols-3 gap-4 py-2">
+    @for (item of myNotes; track $index) {
     <div class="bg-white p-4 rounded-md">
-      <div class="flex justify-between">
+      <div class="flex justify-between items-center mb-3">
         <button
           class="lowercase p-2 rounded-xl"
           [ngClass]="{
@@ -38,7 +41,7 @@
         </button>
         <div class="flex">
           <p (click)="EditItem(item.id)">
-            <fa-icon class="mr-2" [icon]="faPencil"></fa-icon>
+            <fa-icon class="mr-4" [icon]="faPencil"></fa-icon>
           </p>
 
           <p (click)="removeItem($index)">
@@ -46,8 +49,10 @@
           </p>
         </div>
       </div>
-      <h3>{{ item.title }}</h3>
-      <p>{{ item.description }}</p>
+      <h3 class="capitalize">{{ item.title }}</h3>
+      <p class="first-letter:uppercase text-gray-500 h-28 overflowText">
+        {{ item.desc }}
+      </p>
     </div>
     }
   </div>
